# teeny-nes

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  apu.h  bus.cpp  bus.h  cart.cpp  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  cycles.h  main.cpp  nes.cpp  nes.h  ppu.cpp  ppu.h
src/app/: app.cpp  app.h  app_window.cpp  app_window.h  game_genie_window.cpp  game_genie_window.h  game_window.cpp  game_window.h  imgui.cpp  imgui.h  keyboard.cpp  keyboard.h  main.cpp  name_table.cpp  name_table.h  nfd.cpp  nfd.h  palette.cpp  palette.h  pattern_table.cpp  pattern_table.h  pixel.h  ppu_window.cpp  ppu_window.h  sdl.cpp  sdl.h  stats.cpp  stats.h  teeny_nes.cpp  teeny_nes.h
src/emu/: apu.cpp  apu.h  bits.h  cart.cpp  cart.h  coroutine.h  cpu.cpp  cpu.h  cycles.h  game_genie.cpp  game_genie.h  input.cpp  input.h  nes.cpp  nes.h  ppu.cpp  ppu.h  timer.cpp  timer.h
src/emu/mapper/: axrom.cpp  axrom.h  cnrom.cpp  cnrom.h  mapper.cpp  mapper.h  mmc1.cpp  mmc1.h  mmc3.cpp  mmc3.h  nrom.cpp  nrom.h  uxrom.cpp  uxrom.h
test/: CMakeLists.txt  cart_test.cpp  cartridge_test.cpp  cpu_test.cpp  ppu_test.cpp
test/emu/: cart_test.cpp  cpu_test.cpp  game_genie_test.cpp  mmc3_test.cpp  ppu_test.cpp
test_data/: mmc3_1_clocking.labels.txt  mmc3_1_clocking.nes  mmc3_2_details.labels.txt  mmc3_2_details.nes  mmc3_3_a12_clocking.labels.txt  mmc3_3_a12_clocking.nes  mmc3_4_scanline_timing.labels.txt  mmc3_4_scanline_timing.nes  mmc3_5_mmc3.labels.txt  mmc3_5_mmc3.nes  mmc3_6_mmc3_alt.labels.txt  mmc3_6_mmc3_alt.nes
